--- a/kicad/zxRebornClock/ibom.config.ini
+++ b/kicad/zxRebornClock/ibom.config.ini
@@ -13,7 +13,7 @@ layer_view=FB
 compression=1
 open_browser=1
 [general]
-bom_dest_dir=D:\\boris\\source\\zxRebornClock\\kicad\\out
+bom_dest_dir=/home/boris/my/zxRebornClock-new-board/kicad/out
 bom_name_format=ibom
 component_sort_order=C,R,L,D,U,Y,X,F,SW,A,~,HS,CNN,J,P,NT,MH
 component_blacklist=G*
